--- a/app/src/main/res/layout/activity_manualbutton.xml
+++ b/app/src/main/res/layout/activity_manualbutton.xml
@@ -55,131 +55,151 @@
 
 
         <TableRow
-            android:background="#F0F7F7"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:background="@drawable/table_border">
 
-            <TextView
+            <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
-            <TextView
+            <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
-            <TextView
+            <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
-            <TextView
+            <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
         </TableRow>
 
         <TableRow
-            android:background="#F0F7F7"
-            android:padding="5dp">
+            android:padding="20dp"
+            android:background="@drawable/table_border">
+
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
-
-        </TableRow>
-
-        <TableRow
-            android:background="#F0F7F7"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
         </TableRow>
 
         <TableRow
-            android:background="#F0F7F7"
+            android:background="@drawable/table_border"
             android:padding="5dp">
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
         </TableRow>
 
         <TableRow
-            android:background="#F0F7F7"
+            android:background="@drawable/table_border"
             android:padding="5dp">
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
+
+        </TableRow>
+
+        <TableRow
+            android:background="@drawable/table_border"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"/>
         </TableRow>
 
     </TableLayout>
