--- a/app/src/main/res/layout/activity_manualbutton.xml
+++ b/app/src/main/res/layout/activity_manualbutton.xml
@@ -43,7 +43,7 @@
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#000000"
         android:paddingLeft="5dp"
@@ -55,61 +55,62 @@
 
 
         <TableRow
-            android:padding="5dp"
-            android:background="@drawable/table_border">
+            android:background="@drawable/table_border"
+            android:padding="5dp">
 
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <EditText
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
         </TableRow>
 
         <TableRow
-            android:padding="20dp"
-            android:background="@drawable/table_border">
+            android:background="@drawable/table_border"
+            android:padding="5dp">
 
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/table_border" />
 
         </TableRow>
 
@@ -121,25 +122,25 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
         </TableRow>
 
@@ -151,25 +152,25 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
         </TableRow>
 
@@ -181,25 +182,25 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
 
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:background="@drawable/table_border"/>
+                android:background="@drawable/table_border" />
         </TableRow>
 
     </TableLayout>
